# Orion-Store

./: .dockerignore  .editorconfig  .env.example  .env.production.example  .env.staging.example  .flake8  .gitignore  .pre-commit-config.yaml  ORION-Project-Plan-Report.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
01-FOUNDATION/docs/: schema-v2.md
01-FOUNDATION/infrastructure/: Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.test.yml  docker-entrypoint.sh
01-FOUNDATION/staging/: prometheus.yml
02-CORE/core/: audit_log.py  beta_gate.py  caching.py  constants.py  context.py  crypto.py  event_handlers.py  events.py  exceptions.py  jwt_auth.py  lazy_load.py  logging_config.py  middleware.py  monitoring.py  pagination.py  permissions.py  rate_limit.py  redis_cache.py  security_headers.py  utils.py
02-CORE/orion/: __init__.py  app.py  celery_app.py  config.py  extensions.py  wsgi.py
03-MODELS/b2b/: customer_group.py  price_list.py  quote.py
03-MODELS/base/: __init__.py  base_model.py  mixins.py  pk.py  types.py
03-MODELS/bnpl/: bnpl_provider.py  bnpl_transaction.py
03-MODELS/catalog/: __init__.py  brand.py  catalog_base.py  category.py  product.py
03-MODELS/discount/: voucher.py
03-MODELS/feature_flag/: feature_flag.py  feature_flag_override.py
03-MODELS/i18n/: category_translation.py  cms_page.py  locale.py  page_translation.py  product_translation.py  translation_glossary.py
03-MODELS/oms/: fulfillment.py  warehouse.py
03-MODELS/order/: __init__.py  cart.py  order.py
03-MODELS/payment/: __init__.py  payment.py  refund.py
03-MODELS/platform_models/: __init__.py  audit_log.py  commission_ledger.py  financial_event.py  invoice.py  platform_settings.py  tenant_gateway.py
03-MODELS/returns/: merchandise_return.py  return_reason.py
03-MODELS/shipping/: shipping_method.py  shipping_rate.py  shipping_zone.py
03-MODELS/tenant/: __init__.py  tenant.py  tenant_config.py
03-MODELS/user/: __init__.py  permission.py  role.py  user.py
04-SERVICES/auth/: auth_service.py
04-SERVICES/b2b_svc/: b2b_service.py
04-SERVICES/bnpl_svc/: bnpl_service.py
04-SERVICES/catalog_svc/: __init__.py  category_service.py  product_service.py
04-SERVICES/discount_svc/: voucher_service.py
04-SERVICES/feature_flag_svc/: feature_flag_evaluator.py  feature_flag_service.py
04-SERVICES/i18n_svc/: glossary_service.py  i18n_service.py  page_service.py  translation_service.py
04-SERVICES/integrations/: __init__.py  external_registry.py
04-SERVICES/notification_svc/: email_sender.py  notification_service.py  tasks.py
04-SERVICES/oms_svc/: oms_service.py
04-SERVICES/order_svc/: __init__.py  cart_service.py  checkout_service.py  order_service.py
04-SERVICES/payment_svc/: payment_service.py
04-SERVICES/rma_svc/: rma_service.py
07-ADMIN/: admin_assets.py  admin_auth.py
db/: rls.sql
migrations/: env.py
scripts/: backup_db.ps1  check_coverage.py  check_file_length.py  coverage_manifest.yaml  dev.ps1  launch_verify.py  provision_postgres.sql  seed_beta.py  seed_platform.py  setup_local.ps1  start_redis.ps1
tests/: conftest.py  test_smoke.py
(+166 files in other folders)
