[project]
name = "orion-ecommerce"
version = "0.1.0"
description = "Azadexa multi-tenant e-commerce SaaS (Orion engine)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Flask==3.1.3",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-Migrate==4.0.7",
    "psycopg2-binary==2.9.9",
    "redis==5.0.3",
    "python-dotenv==1.2.2",
    "cryptography==48.0.1",
    "requests==2.33.0",
    "Flask-JWT-Extended==4.7.1",
    "bcrypt==4.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-flask==1.3.0",
    "black==26.3.1",
    "flake8==7.0.0",
    "isort==5.13.2",
    "pre-commit==3.6.0",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    "coverage==7.4.4",
    "pyyaml==6.0.1",
    "vcrpy==8.2.1",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["orion", "core", "base", "v1", "auth", "tenant", "tenant_svc", "user", "integrations", "catalog", "catalog_svc", "platform_models", "platform_svc"]

[tool.coverage.run]
source = ["02-CORE", "03-MODELS", "04-SERVICES", "05-API"]
omit = [
    "*/__init__.py",
    "**/wsgi.py",
    "03-MODELS/base/mixins.py",
    "**/tests/**",
]
relative_files = true

[tool.coverage.report]
precision = 1
show_missing = true
fail_under = 85

[tool.pytest.ini_options]
testpaths = ["tests", "02-CORE/tests"]
pythonpath = [".", "02-CORE", "03-MODELS", "04-SERVICES", "05-API"]
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "unit: Pure logic — no route/HTTP.",
    "integration: Full-stack checks on PostgreSQL (CHECK, FK, RLS).",
    "external: Recorded or live third-party HTTP (VCR) — excluded from CI.",
]
addopts = "-ra"

[tool.orion.file_length]
default_max = 500
paths = [
    { glob = "**/*_service.py", max = 400 },
    { glob = "05-API/v1/*.py", max = 300 },
    { glob = "03-MODELS/**/*.py", max = 250 },
    { glob = "migrations/versions/*.py", max = 200 },
]
